--- a/4-open-source-for-end-langs.tex
+++ b/4-open-source-for-end-langs.tex
@@ -52,6 +52,8 @@ Here, I'll explain some open source resources that can be used to bootstrap deve
 
 Here I'll talk about the inextricable nature of linguistics data and code, and how they are linked.
 
+% TODO Cite Austin Principles for Data AustinPrinciples2017
+
 \subsection{Data and privacy}
 \label{subsec:data-and-privacy}
 
