--- a/references.bib
+++ b/references.bib
@@ -21,6 +21,82 @@
   year={2014}
 }
 
+
+@misc{AustinPrinciples2017,
+  author = {Andrea L. Berez-Kroeker and Helene N. Andreassen and
+                  Lauren Gawne and Gary Holton and Susan Smythe Kung
+                  and Peter Pulsifer and Lauren B. Collister and {the
+                  Data Citation and Attribution in Linguistics Group}
+                  and {the Linguistics Data Interest Group}},
+  title =  {The {Austin} Principles of Data Citation in
+                  Linguistics},
+  year =  2017,
+  note =  {Draft, Version 0.1},
+  url =   {http://site.uit.no/linguisticsdatacitation/austinprinciples}
+}
+
+@inproceedings{calzolari2012lre,
+  title={The LRE Map. Harmonising Community Descriptions of Resources.},
+  author={Calzolari, Nicoletta and Del Gratta, Riccardo and Francopoulo, Gil and Mariani, Joseph and Rubino, Francesco and Russo, Irene and Soria, Claudia},
+  booktitle={LREC},
+  pages={1084--1089},
+  year={2012}
+}
+
+@article{bender2016linguistic,
+  title={Linguistic typology in natural language processing},
+  author={Bender, Emily M},
+  journal={Linguistic Typology},
+  volume={20},
+  number={3},
+  pages={645--660},
+  year={2016},
+  publisher={De Gruyter}
+}
+
+@article{kay1997proper,
+  title={The proper place of men and machines in language translation},
+  author={Kay, Martin},
+  journal={machine translation},
+  volume={12},
+  number={1-2},
+  pages={3--23},
+  year={1997},
+  publisher={Springer}
+}
+
+
+@book{bickerton2016roots,
+  title={Roots of language},
+  author={Bickerton, Derek},
+  year={2016},
+  publisher={Language Science Press}
+}
+
+@article{izreel2003emergence,
+  title={The emergence of spoken Israeli Hebrew},
+  author={Izreel, Shlomo},
+  journal={Corpus Linguistics and Modern Hebrew: Towards the Compilation of the Corpus of Spoken Israeli Hebrew},
+  pages={85--104},
+  year={2003}
+}
+
+@book{navidictionary,
+  title={Na'vi-{English} Dictionary, version 13.63},
+  author={Miller, Mark and Aean, Tirea and Tuiq and Littauer, Richard},
+  year={2018},
+  publisher={learnnavi.org},
+  url={http://eanaeltu.learnnavi.org/dicts/NaviDictionary.pdf}
+}
+
+@book{wmannis,
+  title={Horen \`i’fyay\"a leNa’vi: A Reference Grammar of Na’vi},
+  author={William S. Annis},
+  year={2018},
+  publisher={learnnavi.org},
+  url={https://files.learnnavi.org/docs/horen-lenavi.pdf}
+}
+
 @article{shah2006motivation,
   title={Motivation, governance, and the viability of hybrid forms in open source software development},
   author={Shah, Sonali K},
@@ -417,6 +493,12 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
  publisher={Oxford University Press}
 }
 
+@misc{unesco11directory,
+    author = {UNESCO},
+    title = {Directory International cooperation programs for the protection and promotion of languages and linguistic diversity},
+    year = {2011},
+    note={Accessible at \href{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}}
+}
 
 @article{brenzinger2003language,
  title={Language vitality and endangerment},
@@ -788,6 +870,25 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
  journal={Proceedings of SPECOM 2003},
  pages={8--15},
  year={2003}
+}
+
+@article{krauwer1998elsnet,
+  title={ELSNET and ELRA: A common past and a common future},
+  author={Krauwer, Steven},
+  journal={ELRA Newsletter},
+  volume={3},
+  number={2},
+  pages={4--5},
+  year={1998}
+}
+
+@article{bender2010grand,
+  title={A grand challenge for linguistics: Scaling up and integrating models},
+  author={Bender, Emily M and Good, Jeff},
+  journal={White paper contributed to NSF’s SBE},
+  volume={2020},
+  pages={1--1},
+  year={2010}
 }
 
 @inproceedings{maegaard2006blark,
