--- a/thesis.tex
+++ b/thesis.tex
@@ -111,8 +111,9 @@
 \input{1-introduction}
 \include{2-endangered-languages}
 % The State of endangered languages and computational linguistics
-%\subsection{Definining Endangered Languages}
+%\subsection{Defining Endangered Languages}
 %\subsection{What are computational resources}
+\include{2.5-resources}
 \include{3-open-source}
 % \subsection{Defining "open source"}
 % \subsection{Where is open source code?}
