Edit FLOSS chapter

--- a/6-methods.tex
+++ b/6-methods.tex
@@ -7,6 +7,9 @@
 
 I'll give some recommendations on a license, both for individuals and for larger companies. I am not a lawyer, so this will be short and tempered.
 
+
+Work published without a license on a public site is not technically open source, either. When software is not licensed, it by default reverts (in the USA) to copyright where {\it all rights are reserved}, which is by definition not FLOSS. For this reason, it's important to add a license to code if it is in your purview to do so, and if you wish to follow the open source methodology. %This may belong elsewhere
+
 \subsection{Choosing repositories}
 \label{choosing-repositories}
 
