fix: change apostrophes

--- a/references.bib
+++ b/references.bib
@@ -90,7 +90,7 @@
 }
 
 @book{wmannis,
-  title={Horen \`i’fyay\"a leNa’vi: A Reference Grammar of Na’vi},
+  title={Horen l\`{i}'fyay\"{a} {leNa'vi}: A Reference Grammar of {Na'vi}},
   author={William S. Annis},
   year={2018},
   publisher={learnnavi.org},
@@ -131,7 +131,7 @@
 
 @article{lowndes2017our,
   title={Our path to better science in less time using open data science tools},
-  author={Lowndes, Julia S Stewart and Best, Benjamin D and Scarborough, Courtney and Afflerbach, Jamie C and Frazier, Melanie R and O’Hara, Casey C and Jiang, Ning and Halpern, Benjamin S},
+  author={Lowndes, Julia S Stewart and Best, Benjamin D and Scarborough, Courtney and Afflerbach, Jamie C and Frazier, Melanie R and O'Hara, Casey C and Jiang, Ning and Halpern, Benjamin S},
   journal={Nature ecology \& evolution},
   volume={1},
   number={6},
@@ -885,7 +885,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 @article{bender2010grand,
   title={A grand challenge for linguistics: Scaling up and integrating models},
   author={Bender, Emily M and Good, Jeff},
-  journal={White paper contributed to NSF’s SBE},
+  journal={White paper contributed to NSF's SBE},
   volume={2020},
   pages={1--1},
   year={2010}
