feat: Add the References section to the ToC

--- a/thesiscommands.sty
+++ b/thesiscommands.sty
@@ -258,3 +258,10 @@
 % for eps graphics
 
 \newcommand{\thedate}{\today}
+
+\usepackage[sc]{mathpazo}
+
+% Add the Bibliography to the Table of Contents
+\usepackage[nottoc]{tocbibind}
+% Rename to References
+\renewcommand{\bibname}{References}
