fix: Stop using numbers for filenames

--- a/thesis.tex
+++ b/thesis.tex
@@ -61,7 +61,7 @@
 \end{titlepage}
 \newpage
 
-\include{0-abstract}
+\include{abstract}
 
 \newpage
 
@@ -99,21 +99,21 @@
 
 \newpage
 
-% % \listoffigures
-% % \listoftables
+\listoffigures
+\listoftables
 % % \listoflistings
 % % \thispagestyle{empty}
 % % \newpage
 
 \setcounter{page}{1}
 
-\input{1-introduction}
-\include{2-endangered-languages}
+\include{introduction}
+\include{endangered-languages}
 % The State of endangered languages and computational linguistics
 %\subsection{Defining Endangered Languages}
 %\subsection{What are computational resources}
-\include{2.5-resources}
-\include{3-open-source}
+\include{resources}
+\include{open-source}
 % \subsection{Defining "open source"}
 % \subsection{Where is open source code?}
 % \subsection{Data rights and privacy}
@@ -121,7 +121,7 @@
 % \subsection{Funding}
 % \subsection{Military and enterprise solutions}
 % \subsection{Ethical reasons for using open source}
-\include{4-open-source-for-end-langs}
+\include{open-source-for-end-langs}
 % Open Source code for endangered languages
 % \subsection{BLARK}
 % \subsection{NLTK and other larger libraries}
@@ -129,22 +129,22 @@
 % \subsection{solutions}
 % A database for open source code
 % Describe github.com/RichardLitt/endangered-languages
-\include{5-case-studies}
+\include{case-studies}
 % \subsection{Gaelic}
 % \subsection{Naskapi}
 % \subsection{Kilangi} Another possible usecase?
-\include{6-methods}
+\include{methods}
 % \subsection{Choosing a license}
 % \subsection{Choosing repositories}
 % \subsection{Sharing code without a platform}
-\include{7-discussion}
+\include{discussion}
 % \subsection{Why isn't more code open?}
 % \subsection{How does open source demonstrably help?}
-\include{8-future-work}
+\include{future-work}
 % \subsection{Beyond Wikipedia and Ethnologue}
 % \subsection{An Open Data Repository}
 % \subsection{Storage on a p2p network}
-\include{9-conclusion}
+\include{conclusion}
 
 % % \input{background}
 % % \input{definition}
